--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  margin-bottom: 48px;
+  margin-bottom: 3rem;
   overflow: hidden;
   display: flex;
   justify-content: space-between;
