--- a/src/scss/layouts/_base.scss
+++ b/src/scss/layouts/_base.scss
@@ -1,7 +1,6 @@
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */≈
 html {
-  font-size: 100%;
   font-size: 16px; 
 }
 
